@@ -193,3 +193,5 @@ EDITATTRIBUTE.text=\u0041\u0074\u0074\u0072\u0069\u0062\u0075\u0074\u0020\u007b\
 EDITINDEX.text=\u0049\u006e\u0064\u0065\u0078\u0020\u007b\u0030\u007d\u0020\u0062\u0065\u0061\u0072\u0062\u0065\u0069\u0074\u0065\u006e
 EDITSUBJECTAREA.text=\u0053\u0075\u0062\u006a\u0065\u0063\u0074\u0020\u0041\u0072\u0065\u0061\u0020\u007b\u0030\u007d\u0020\u0062\u0065\u0061\u0072\u0062\u0065\u0069\u0074\u0065\u006e
 SQL.text=\u0053\u0051\u004c
+EXPANDALL.text=\u0041\u006c\u006c\u0065\u0073\u0020\u0065\u0078\u0070\u0061\u006e\u0064\u0069\u0065\u0072\u0065\u006e
+COLLAPSEALL.text=\u0041\u006c\u006c\u0065\u0073\u0020\u007a\u0075\u0073\u0061\u006d\u006d\u0065\u006e\u006b\u006c\u0061\u0070\u0070\u0065\u006e
